--- a/src/App.scss
+++ b/src/App.scss
@@ -129,17 +129,12 @@
             }
         }
     }
-
 }
 
+// ---------------🍀slider--------------
+.slider{
 
-
-
-
-
-
-// ---------------🍀navbar--------------
-
+}
 
 
 
