--- a/src/App.scss
+++ b/src/App.scss
@@ -133,6 +133,48 @@
 
 // ---------------🍀slider--------------
 .slider{
+    height: calc(100vh - 80px); /* 🦄navbar height 80px만큼 뺌 */
+    width: 100vw;
+    position: relative;
+    overflow: hidden;
+  
+    .container{
+        width: 300vw;   /* 🦄image3개 들어갈 만큼.. 100vw X 3개이미지  */
+        height: 100%;
+        display: flex;
+        transition: all 1s ease;      /* 👉0348 */
+
+        img{
+            width: 100vw;
+            height: 100%;
+            object-fit: cover;      /* 🦄object-fit: cover; */
+        }
+    }
+
+    .icons{
+        width: fit-content;     /*🦄fit-content; */
+        display: flex;
+
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 100px;
+
+        gap: 10px;
+        margin: auto;       /* 가운데 정렬 */
+
+        .icon{
+            width: 50px;
+            height: 50px;
+            border: 1px solid #999;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+
+            border-radius: 50%;
+        }
+    }
 
 }
 
