--- a/src/App.scss
+++ b/src/App.scss
@@ -133,8 +133,12 @@
 
 // ---------------🍀slider--------------
 .slider{
-    height: calc(100vh - 80px); /* 🦄navbar height 80px만큼 뺌 */
-    width: 100vw;
+    // height: calc(100vh - 80px); /* 🦄navbar height 80px만큼 뺌 */
+    // width: 100vw;
+    height: 50vh;
+    width: 50vw;
+
+    margin: auto;
     position: relative;
     overflow: hidden;
   
@@ -158,7 +162,7 @@
         position: absolute;
         left: 0;
         right: 0;
-        bottom: 100px;
+        bottom: 50px;
 
         gap: 10px;
         margin: auto;       /* 가운데 정렬 */
@@ -166,7 +170,7 @@
         .icon{
             width: 50px;
             height: 50px;
-            border: 1px solid #999;
+            border: 1px solid #000;
             display: flex;
             align-items: center;
             justify-content: center;
