--- a/src/App.scss
+++ b/src/App.scss
@@ -202,62 +202,58 @@
     }
     .bottom{
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
-        gap: 50px;
+        gap: 10px; 
 
-    }
-
-    .card{
-        width: 280px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin-bottom: 50px;
-        
-        .image{
-            width: 100%;
-            height: 400px;
-            overflow: hidden;        /* 🦄 overflow: hidden; 스크롤바 없앰 */
-            position: relative;
-            
-            .mainImg{
-                z-index: 1;
-            }
-
-            &:hover{
-                .secondImg{
-                    z-index: 2;   /* 🦄 hover...z-index변화 */
-                }                
-            }
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                position: absolute;
-            }         
-        }
-
-        // h2{
-        //     font-size: 16px;
-        //     font-weight: 400;
-        // }
-
-        .prices{
+        // ---card----
+      .card{
+            width: 280px;
             display: flex;
-            gap: 20px;
-            // h3{
-            //     font-size: 18px;
-            //     font-weight: 500;
+            flex-direction: column;    
 
-            //     &:first-child{
-            //         text-decoration: dashed;
-            //     }
-            // }
+            border: 1px solid gray;
+            border-radius: 4px;
+            
+            .image{
+                width: 100%;
+                height: 400px;
+                overflow: hidden;        /* 🦄 overflow: hidden; 스크롤바 없앰 */
+                position: relative;
+                
+                .mainImg{
+                    z-index: 1;
+                }
+
+                &:hover{
+                    .secondImg{
+                        z-index: 2;   /* 🦄 hover...z-index변화 */
+                    }                
+                }
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    position: absolute;
+                }         
+            }
+       
+            .title{
+                margin: auto;
+            }
+          
+            .prices{
+                display: flex;
+                gap: 20px;
+
+                margin: auto;
+           
+             
+              
+            }            
         }
-
-
-
     }
+
 
 }
 
