--- a/src/App.scss
+++ b/src/App.scss
@@ -262,9 +262,13 @@
 
 
 
-// ---------------🍀navbar--------------
+// ---------------🍀categories--------------
 
-
+.categories{
+    img{
+        width: 10%;
+    }
+}
 
 
 
