--- a/src/App.scss
+++ b/src/App.scss
@@ -143,13 +143,13 @@
     overflow: hidden;
   
     .container{
-        width: 300vw;   /* 🦄image3개 들어갈 만큼.. 100vw X 3개이미지  */
+        width: 150vw;   /* 👉0348 slider.js image3개 들어갈 만큼.. 50vw X 3개이미지  */
         height: 100%;
         display: flex;
-        transition: all 1s ease;      /* 👉0348 */
+        transition: all 1s ease;      /* 👉0348 slider.js */
 
         img{
-            width: 100vw;
+            width: 50vw;    /* 👉0348. slider.js */
             height: 100%;
             object-fit: cover;      /* 🦄object-fit: cover; */
         }
@@ -158,6 +158,7 @@
     .icons{
         width: fit-content;     /*🦄fit-content; */
         display: flex;
+        
 
         position: absolute;
         left: 0;
@@ -177,6 +178,7 @@
             cursor: pointer;
 
             border-radius: 50%;
+            background-color: transparent;
         }
     }
 }
