--- a/src/App.scss
+++ b/src/App.scss
@@ -278,6 +278,21 @@
     img{
         width: 10%;
     }
+
+    .parent {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+    }
+        
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 2 / 1 / 3 / 2; }
+    .div3 { grid-area: 1 / 2 / 3 / 3; }
+    .div4 { grid-area: 1 / 3 / 2 / 4; }
+    .div5 { grid-area: 1 / 4 / 2 / 5; }
+    .div6 { grid-area: 2 / 3 / 3 / 5; }
 }
 
 
