--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,30 @@
 
 // ---------------🍀global--------------
 
+*{
+    /* font-family: "Open Sans", sans-serif; */  
+    text-decoration: none; 
+
+    border: 0;
+    margin: 0;
+    padding: 0;
+  
+    /* 🦄margin의 기준선이 border를 기준으로  만들어짐 */
+    box-sizing: border-box;
+  
+    /* 🦄  모든 transition에 공통으로 넣음. 일일히 각 element마다 transition넣을 필요없음*/
+    transition: all 0.2s linear;   
+  
+    overflow-x: hidden;
+    
+  }
+  
+body {
+    max-width: 1150px;
+    // text-align: center;
+    margin: auto;
+  }
+
 .link{
     color: inherit;
     text-decoration: none;
@@ -263,36 +287,68 @@
             }
         }
     }
-
-
 }
-
-
-
-
 
 
 // ---------------🍀categories--------------
 
 #categories{
+    
+
     img{
-        width: 10%;
+        width: 30%;
     }
 
     .parent {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
+        grid-column-gap: 10px;  /* 🍤gap */
+        grid-row-gap: 10px;  /* 🍤gap */
+
+        
+        div{
+            position: relative;                     
+
+            overflow-y: hidden;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+               
+              }
+
+            button{
+                position: absolute;
+                min-width: 100px;   /* 🦄min-width없으면 버튼이 너무 작아서 넣음.  */
+                width: fit-content;   /* 🦄width: fit-content; */
+                height: 50px;
+                padding: 10px;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: auto;
+                cursor: pointer;
+                border: none;
+                background-color: white;
+                text-transform: uppercase;
+                font-weight: 500;
+            }
+
+
+
+        }
+        
+        .div1 { grid-area: 1 / 1 / 2 / 2; }
+        .div2 { grid-area: 2 / 1 / 3 / 2; }
+        .div3 { grid-area: 1 / 2 / 3 / 3; }
+        .div4 { grid-area: 1 / 3 / 2 / 4; }
+        .div5 { grid-area: 1 / 4 / 2 / 5; }
+        .div6 { grid-area: 2 / 3 / 3 / 5; }
     }
         
-    .div1 { grid-area: 1 / 1 / 2 / 2; }
-    .div2 { grid-area: 2 / 1 / 3 / 2; }
-    .div3 { grid-area: 1 / 2 / 3 / 3; }
-    .div4 { grid-area: 1 / 3 / 2 / 4; }
-    .div5 { grid-area: 1 / 4 / 2 / 5; }
-    .div6 { grid-area: 2 / 3 / 3 / 5; }
 }
 
 
