--- a/src/App.scss
+++ b/src/App.scss
@@ -209,7 +209,8 @@ body {
 
 // ---------------🍀featuredProducts--------------
 .featuredProducts{
-    margin: 100px 200px;
+    // margin: 100px 200px;
+    padding-top: 50px;
 
     .top{
         display: flex;
