--- a/src/App.scss
+++ b/src/App.scss
@@ -32,13 +32,14 @@ body {
 
 
 // ---------------🍀navbar--------------
-#navbar{
-    height: 80px;
+#navbar{    
     .wrapper{
-        padding: 10px 30px;
+        width: 1150px;
+        height: 50px;  
+        // padding: 10px 30px;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;   
 
         .item{
             /* 🦄text 수직정렬
@@ -51,24 +52,26 @@ body {
         }
 
         .left{
-            flex: 1;    /* 🦄flex:1  */
+            flex: 2;    /* 🦄flex:1  */
 
             display: flex;
-            align-items: center;
+            
+            // align-items: center;
             gap: 25px;
         }
-        .center{
-            flex: 1;     /* 🦄flex:1  */
-            text-align: center;
+        // .center{
+        //     flex: 1;     /* 🦄flex:1  */
+        //     text-align: center;
 
-            font-size: 30px;
-            letter-spacing: 2px;
-        }
+        //     font-size: 30px;
+        //     letter-spacing: 2px;
+        // }
         .right{
             flex: 1;     /* 🦄flex:1  */
 
             display: flex;
-            align-items: center;
+            // align-items: center;
+            justify-content: flex-end;
             gap: 25px;
 
             .icons{
