--- a/src/App.scss
+++ b/src/App.scss
@@ -13,9 +13,7 @@
     box-sizing: border-box;
   
     /* 🦄  모든 transition에 공통으로 넣음. 일일히 각 element마다 transition넣을 필요없음*/
-    transition: all 0.2s linear;   
-  
-    overflow-x: hidden;
+    transition: all 0.2s linear;  
     
   }
   
@@ -35,7 +33,7 @@ body {
 #navbar{    
     .wrapper{
         width: 1150px;
-        height: 50px;  
+        height: 80px;  
         // padding: 10px 30px;
         display: flex;
         align-items: center;
@@ -71,14 +69,14 @@ body {
 
             display: flex;
             // align-items: center;
-            justify-content: flex-end;
+            justify-content: center;
             gap: 25px;
 
             .icons{
                 display: flex;
                 gap: 15px;
                 color: #777;
-                cursor: pointer;
+                cursor: pointer;                
 
                 .cartIcon{
                     position: relative;
@@ -98,7 +96,9 @@ body {
 
                         border-radius: 50%;
                         background-color: rgb(212, 26, 26);
-                        color: white;                        
+                        color: white;         
+                        
+                        
                     }
                 }
             }
