--- a/src/App.scss
+++ b/src/App.scss
@@ -297,12 +297,9 @@ body {
 // ---------------🍀categories--------------
 
 #categories{
-    
-
     img{
         width: 30%;
     }
-
     .parent {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -310,17 +307,14 @@ body {
         grid-column-gap: 10px;  /* 🍤gap */
         grid-row-gap: 10px;  /* 🍤gap */
 
-        
         div{
-            position: relative;                     
-
+            position: relative;
             overflow-y: hidden;
 
             img{
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
-               
+                object-fit: cover;               
               }
 
             button{
@@ -340,9 +334,6 @@ body {
                 text-transform: uppercase;
                 font-weight: 500;
             }
-
-
-
         }
         
         .div1 { grid-area: 1 / 1 / 2 / 2; }
@@ -351,15 +342,11 @@ body {
         .div4 { grid-area: 1 / 3 / 2 / 4; }
         .div5 { grid-area: 1 / 4 / 2 / 5; }
         .div6 { grid-area: 2 / 3 / 3 / 5; }
-    }
-        
+    }        
 }
 
 
-
-
-
-// ---------------🍀navbar--------------
+// ---------------🍀  --------------
 
 
 
@@ -367,7 +354,73 @@ body {
 
 
 
-// ---------------🍀navbar--------------
+// ---------------🍀  --------------
+
+
+
+
+
+
+
+
+
+
+// ---------------🍀  --------------
+
+
+
+
+
+
+
+
+
+
+// ---------------🍀  --------------
+
+
+
+
+
+
+
+
+
+
+// ---------------🍀  --------------
+
+
+
+
+
+
+
+
+
+
+// ---------------🍀  --------------
+
+
+
+
+
+
+
+
+
+
+// ---------------🍀  --------------
+
+
+
+
+
+
+
+
+
+
+// ---------------🍀  --------------
 
 
 
