--- a/src/App.scss
+++ b/src/App.scss
@@ -245,7 +245,7 @@ body {
             border: 1px solid gray;
             border-radius: 4px;
             
-            .image{
+            .imageWrap{
                 width: 100%;
                 height: 400px;
                 overflow: hidden;        /* 🦄 overflow: hidden; 스크롤바 없앰 */
