--- a/src/App.scss
+++ b/src/App.scss
@@ -210,8 +210,8 @@ body {
     }
 }
 
-// ---------------🍀featuredProducts--------------
-.featuredProducts{
+// ---------------🍀FilteredProducts--------------
+.FilteredProducts{
     // margin: 100px 200px;
     padding-top: 50px;
 
