--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,39 @@ body {
     text-decoration: none;
 }
 
+.myButton {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	background-color:#f9f9f9;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+
+
+  /* 모든 버튼 width 똑같은 크기로 설정 */
+  width: 9rem;
+  text-align: center; 
+  
+  /* hover-focus-active순서로 하면 에러 안남 */
+  &:hover {
+      background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+      background-color:#e9e9e9;
+  }
+  &:active {
+      position:relative;
+      top:1px;
+  }
+}
+
+
 
 // ---------------🍀navbar--------------
 #navbar{    
