--- a/src/App.scss
+++ b/src/App.scss
@@ -48,7 +48,7 @@ body {
   /* 모든 버튼 width 똑같은 크기로 설정 */
   width: 9rem;
   text-align: center; 
-  
+
   /* hover-focus-active순서로 하면 에러 안남 */
   &:hover {
       background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
@@ -243,8 +243,8 @@ body {
     }
 }
 
-// ---------------🍀FilteredProducts--------------
-.FilteredProducts{
+// ---------------🍀 CategoryProducts--------------
+.CategoryProducts{
     // margin: 100px 200px;
     padding-top: 50px;
 
