fin-filter feature

--- a/src/App.scss
+++ b/src/App.scss
@@ -420,7 +420,8 @@ body {
     .bottom{    
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-around;
+        align-items: center;
         gap: 10px; 
 
         // ---card----
