--- a/src/App.scss
+++ b/src/App.scss
@@ -413,8 +413,8 @@ body {
     }
 
 }
-// ---------------🍀 ProductList--------------
-#ProductList{    
+// ---------------🍀 ProductsFiltered--------------
+#ProductsFiltered{    
     // margin: 100px 200px;
     padding-top: 50px;
     .bottom{    
