--- a/src/App.scss
+++ b/src/App.scss
@@ -344,6 +344,9 @@ body {
         grid-column-gap: 10px;  /* 🍤gap */
         grid-row-gap: 10px;  /* 🍤gap */
 
+        height: 50vh;
+        
+
         div{
             position: relative;
             overflow-y: hidden;
