--- a/src/App.scss
+++ b/src/App.scss
@@ -240,7 +240,8 @@ body {
             cursor: pointer;
 
             border-radius: 50%;
-            background-color: transparent;
+            background-color: white;           
+            
         }
     }
 }
