--- a/src/App.scss
+++ b/src/App.scss
@@ -23,10 +23,16 @@ body {
     margin: auto;
   }
 
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
 .link{
     color: inherit;
     text-decoration: none;
 }
+
 
 .myButton {
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
