--- a/src/App.scss
+++ b/src/App.scss
@@ -71,12 +71,20 @@ ul {
 // ---------------🍀navbar--------------
 #navbar{    
     .wrapper{
-        width: 1150px;
         height: 80px;  
         // padding: 10px 30px;
+        width: 1150px;
+
         display: flex;
         align-items: center;
-        justify-content: space-between;   
+        
+        position: fixed;
+        top: 0;        
+        margin: 0 auto; 
+    
+        z-index: 100;
+        background-color: lightgrey;
+        
 
         .item{
             /* 🦄text 수직정렬
@@ -90,11 +98,9 @@ ul {
 
         .left{
             flex: 2;    /* 🦄flex:1  */
-
-            display: flex;
-            
-            // align-items: center;
+            display: flex;            
             gap: 25px;
+            padding-left: 20px;
         }
         // .center{
         //     flex: 1;     /* 🦄flex:1  */
@@ -588,7 +594,7 @@ ul {
 
             font-weight: 500;               
             
-            background-color: #2879fe;
+            background-color: #446df6;
             color: white;                
         }
 
@@ -600,7 +606,7 @@ ul {
               display: flex;
               align-items: center;
               gap: 10px;
-              color: #2879fe;
+              color: #446df6;
               font-size: 14px;
             }
           }
