--- a/src/App.scss
+++ b/src/App.scss
@@ -94,6 +94,10 @@ ul {
             display: flex;  
             align-items: center;  
             font-size: 18px;
+
+            &:hover{
+                transform: scale(1.1);
+            }
         }
 
         .left{
@@ -121,8 +125,8 @@ ul {
                 display: flex;
                 gap: 15px;
                 color: #777;
-                cursor: pointer;                
-
+                cursor: pointer;                  
+             
                 .cartIcon{
                     position: relative;
                     
@@ -588,21 +592,19 @@ ul {
               }
             }
             
-        .addCart{
+        .productBtn{
             width: 250px;
-            padding: 10px;
-
+            
             display: flex;
             align-items: center;
             justify-content: center;
-
-            gap: 20px;
-            cursor: pointer;
-
-            font-weight: 500;               
             
-            background-color: #446df6;
-            color: white;                
+            // padding: 10px;
+            // gap: 20px;
+            // cursor: pointer;
+            // font-weight: 500; 
+            // background-color: #446df6;
+            // color: white;                
         }
 
         .links{
