--- a/src/App.scss
+++ b/src/App.scss
@@ -753,6 +753,9 @@ ul {
     #navbar{    
         .wrapper{    
             width: 520px;
+            .none{
+                display: none;
+            }
         }
     }
     #slider{   
