--- a/src/App.scss
+++ b/src/App.scss
@@ -84,6 +84,42 @@ ul {
     
         z-index: 100;
         background-color: lightgrey;
+
+        .burger-container{                
+            flex: 2;    
+            padding-left: 20px;
+
+            justify-content: flex-start;
+            // display: none;
+            // display: block;
+
+
+            .burger {     
+                width: 40px;       
+                height: 40px;     
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                                
+                gap: 6px;
+
+                z-index: 200;
+
+                border-radius: 5px;
+                background-color: #8083FF;
+                
+                cursor: pointer;
+
+                .bar {
+                    width: 25px;
+                    height: 3px;
+                    background-color: #fff;                
+                }
+            }    
+        }
+
         
 
         .item{
