--- a/src/App.scss
+++ b/src/App.scss
@@ -120,6 +120,26 @@ ul {
             }    
         }
 
+        .burger-left{
+            width: 50vw;
+            height: 80vh;
+
+            position: absolute;
+            top: 0;
+            left: -100vw;
+            // left: 0;
+
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            padding-top: 10vh;
+
+            background-color: lightgray;
+
+            z-index: 150;
+        }
+
         
 
         .item{
