--- a/src/components/Navbar2.scss
+++ b/src/components/Navbar2.scss
@@ -1,69 +1,116 @@
 // Color variables
 $primary: #fff;
-$secondary: rgb(80, 80, 80);
-$secondary-background: rgb(103, 103, 103);
+$secondary: lightgray;
+$secondary-background: lightgray;
 
-// 🍀active
-.navbar-container.active {
-  background-color: transparent;
-  transition: all 0.5s ease;
+.wrapper{
+  .left{          
+      display: flex;        
+      gap: 25px;
+      padding-left: 20px;
+      
+      // 🍀active
+      .navbar-container.active {
+        background-color: transparent;
+        transition: all 0.5s ease;
+      }
+
+      .navbar-container {
+        // CSS fix for different background-color
+        
+        width: 1150px;
+        height: 60px;
+        
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        
+        position: fixed;
+        top: 0;        
+        margin: 0 auto; 
+
+        background-color: $secondary-background;
+        transition: all 0.5s ease; 
+        z-index: 2;
+
+
+        // .navbar-logo {
+        //   color: $primary;
+        //   cursor: pointer;
+        //   text-decoration: none;
+        //   font-size: 1.5rem;
+        //   display: flex;
+        //   align-items: center;
+        //   gap: 0.5rem;
+        // }
+
+          // 🦄responsive
+          .menu-icon {
+            display: none;    
+            z-index: 100;
+          }
+
+          //🍀nav-menu
+          .nav-menu {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            // CSS fix for the li markers
+            list-style: none;
+
+            .nav-link {
+              color: $primary;
+              text-decoration: none;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              text-decoration: none;
+              padding: 0 1rem;
+              height: 100%;
+              font-size: 1.25rem;
+
+              &:hover {
+                color: $secondary;
+                transition: all 0.3s ease;
+              }
+            }
+          }
+          .icons{
+            display: flex;
+            gap: 15px;
+            color: #777;
+            cursor: pointer;                  
+        
+            .cartIcon{
+                position: relative;
+                
+                span{
+                    position: absolute;
+                    right: -10px;
+                    top: -10px;
+
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    font-size: 12px;
+                    width: 20px;
+                    height: 20px;
+
+                    border-radius: 50%;
+                    background-color: rgb(212, 26, 26);
+                    color: white;         
+                    
+                    
+                }
+            }
+         }
+        }    
 }
 
-.navbar-container {
-  // CSS fix for different background-color
-  background-color: $secondary-background;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 60px;
-  display: flex;
-  justify-content: space-between;
-  z-index: 1;
-  padding: 0 2rem;
-  transition: all 0.5s ease;
 
-  .navbar-logo {
-    color: $primary;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 1.5rem;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-  }
-
-  .menu-icon {
-    display: none;
-  }
-
-  //🍀nav-menu
-  .nav-menu {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    // CSS fix for the li markers
-    list-style: none;
-
-    .nav-link {
-      color: $primary;
-      text-decoration: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-decoration: none;
-      padding: 0 1rem;
-      height: 100%;
-      font-size: 1.25rem;
-      
-      &:hover {
-        color: $secondary;
-        transition: all 0.3s ease;
-      }
-    }
-  }
-
+  // 🦄responsive
   @media screen and (max-width: 768px) {
     .menu-icon {
       display: block;
