--- a/src/App.scss
+++ b/src/App.scss
@@ -69,147 +69,147 @@ ul {
 
 
 // ---------------🍀navbar--------------
-// #navbar{    
-//     .wrapper{
-//         height: 80px;  
-//         // padding: 10px 30px;
-//         width: 1150px;
+#navbar{    
+    .wrapper{
+        height: 80px;  
+        // padding: 10px 30px;
+        width: 1150px;
 
-//         display: flex;
-//         align-items: center;
+        display: flex;
+        align-items: center;
         
-//         position: fixed;
-//         top: 0;        
-//         margin: 0 auto; 
+        position: fixed;
+        top: 0;        
+        margin: 0 auto; 
     
-//         z-index: 100;
-//         background-color: lightgrey;
+        z-index: 100;
+        background-color: lightgrey;
 
-//         .burger-container{                
-//             flex: 2;    
-//             padding-left: 20px;
+        .burger-container{                
+            flex: 2;    
+            padding-left: 20px;
 
-//             justify-content: flex-start;
-//             // display: none;
-//             // display: block;
+            justify-content: flex-start;
+            // display: none;
+            // display: block;
 
 
-//             .burger {     
-//                 width: 40px;       
-//                 height: 40px;     
+            .burger {     
+                width: 40px;       
+                height: 40px;     
 
-//                 display: flex;
-//                 justify-content: center;
-//                 align-items: center;
-//                 flex-direction: column;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
                                 
-//                 gap: 6px;
+                gap: 6px;
 
-//                 z-index: 200;
+                z-index: 200;
 
-//                 border-radius: 5px;
-//                 background-color: #8083FF;
+                border-radius: 5px;
+                background-color: #8083FF;
                 
-//                 cursor: pointer;
+                cursor: pointer;
 
-//                 .bar {
-//                     width: 25px;
-//                     height: 3px;
-//                     background-color: #fff;                
-//                 }
-//             }    
-//         }
+                .bar {
+                    width: 25px;
+                    height: 3px;
+                    background-color: #fff;                
+                }
+            }    
+        }
 
-//         .burger-left{
-//             width: 50vw;
-//             height: 80vh;
+        .burger-left{
+            width: 50vw;
+            height: 80vh;
 
-//             position: absolute;
-//             top: 0;
-//             left: -100vw;
-//             // left: 0;
+            position: absolute;
+            top: 0;
+            left: -100vw;
+            // left: 0;
 
-//             display: flex;
-//             flex-direction: column;
-//             gap: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
 
-//             padding-top: 10vh;
+            padding-top: 10vh;
 
-//             background-color: lightgray;
+            background-color: lightgray;
 
-//             z-index: 150;
-//         }
+            z-index: 150;
+        }
 
         
 
-//         .item{
-//             /* 🦄text 수직정렬
-//               display: flex;  
-//               align-items: center;              
-//             */
-//             display: flex;  
-//             align-items: center;  
-//             font-size: 18px;
+        .item{
+            /* 🦄text 수직정렬
+              display: flex;  
+              align-items: center;              
+            */
+            display: flex;  
+            align-items: center;  
+            font-size: 18px;
 
-//             &:hover{
-//                 transform: scale(1.1);
-//             }
-//         }
+            &:hover{
+                transform: scale(1.1);
+            }
+        }
 
-//         .left{
-//             flex: 2;    /* 🦄flex:1  */
-//             display: flex;            
-//             gap: 25px;
-//             padding-left: 20px;
-//         }
-//         // .center{
-//         //     flex: 1;     /* 🦄flex:1  */
-//         //     text-align: center;
+        .left{
+            flex: 2;    /* 🦄flex:1  */
+            display: flex;            
+            gap: 25px;
+            padding-left: 20px;
+        }
+        // .center{
+        //     flex: 1;     /* 🦄flex:1  */
+        //     text-align: center;
 
-//         //     font-size: 30px;
-//         //     letter-spacing: 2px;
-//         // }
-//         .right{
-//             flex: 1;     /* 🦄flex:1  */
+        //     font-size: 30px;
+        //     letter-spacing: 2px;
+        // }
+        .right{
+            flex: 1;     /* 🦄flex:1  */
 
-//             display: flex;
-//             // align-items: center;
-//             justify-content: center;
-//             gap: 25px;
+            display: flex;
+            // align-items: center;
+            justify-content: center;
+            gap: 25px;
 
-//             .icons{
-//                 display: flex;
-//                 gap: 15px;
-//                 color: #777;
-//                 cursor: pointer;                  
+            .icons{
+                display: flex;
+                gap: 15px;
+                color: #777;
+                cursor: pointer;                  
              
-//                 .cartIcon{
-//                     position: relative;
+                .cartIcon{
+                    position: relative;
                     
-//                     span{
-//                         position: absolute;
-//                         right: -10px;
-//                         top: -10px;
+                    span{
+                        position: absolute;
+                        right: -10px;
+                        top: -10px;
 
-//                         display: flex;
-//                         align-items: center;
-//                         justify-content: center;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
 
-//                         font-size: 12px;
-//                         width: 20px;
-//                         height: 20px;
+                        font-size: 12px;
+                        width: 20px;
+                        height: 20px;
 
-//                         border-radius: 50%;
-//                         background-color: rgb(212, 26, 26);
-//                         color: white;         
+                        border-radius: 50%;
+                        background-color: rgb(212, 26, 26);
+                        color: white;         
                         
                         
-//                     }
-//                 }
-//             }
-//         }        
-//     }
-// }
+                    }
+                }
+            }
+        }        
+    }
+}
 
 
 // ---------------🍀Home--------------
