--- a/src/App.scss
+++ b/src/App.scss
@@ -85,60 +85,60 @@ ul {
         z-index: 100;
         background-color: lightgrey;
 
-        .burger-container{                
-            flex: 2;    
-            padding-left: 20px;
+        // .burger-container{                
+        //     flex: 2;    
+        //     padding-left: 20px;
 
-            justify-content: flex-start;
-            // display: none;
-            // display: block;
+        //     justify-content: flex-start;
+        //     // display: none;
+        //     // display: block;
 
 
-            .burger {     
-                width: 40px;       
-                height: 40px;     
+        //     .burger {     
+        //         width: 40px;       
+        //         height: 40px;     
 
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
+        //         display: flex;
+        //         justify-content: center;
+        //         align-items: center;
+        //         flex-direction: column;
                                 
-                gap: 6px;
+        //         gap: 6px;
 
-                z-index: 200;
+        //         z-index: 200;
 
-                border-radius: 5px;
-                background-color: #8083FF;
+        //         border-radius: 5px;
+        //         background-color: #8083FF;
                 
-                cursor: pointer;
+        //         cursor: pointer;
 
-                .bar {
-                    width: 25px;
-                    height: 3px;
-                    background-color: #fff;                
-                }
-            }    
-        }
+        //         .bar {
+        //             width: 25px;
+        //             height: 3px;
+        //             background-color: #fff;                
+        //         }
+        //     }    
+        //  }
 
-        .burger-left{
-            width: 50vw;
-            height: 80vh;
+        // .burger-left{
+        //     width: 50vw;
+        //     height: 80vh;
 
-            position: absolute;
-            top: 0;
-            left: -100vw;
-            // left: 0;
+        //     position: absolute;
+        //     top: 0;
+        //     left: -100vw;
+        //     // left: 0;
 
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
+        //     display: flex;
+        //     flex-direction: column;
+        //     gap: 20px;
 
-            padding-top: 10vh;
+        //     padding-top: 10vh;
 
-            background-color: lightgray;
+        //     background-color: lightgray;
 
-            z-index: 150;
-        }
+        //     z-index: 150;
+        // }
 
         
 
@@ -149,7 +149,7 @@ ul {
             */
             display: flex;  
             align-items: center;  
-            font-size: 18px;
+            font-size: 16px;
 
             &:hover{
                 transform: scale(1.1);
