--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -7,6 +7,7 @@
 
         display: flex;
         align-items: center;
+        justify-content: space-evenly;
         
         position: fixed;
         top: 0;        
@@ -14,63 +15,6 @@
     
         z-index: 100;
         background-color: lightgrey;
-
-        // .burger-container{                
-        //     flex: 2;    
-        //     padding-left: 20px;
-
-        //     justify-content: flex-start;
-        //     // display: none;
-        //     // display: block;
-
-
-        //     .burger {     
-        //         width: 40px;       
-        //         height: 40px;     
-
-        //         display: flex;
-        //         justify-content: center;
-        //         align-items: center;
-        //         flex-direction: column;
-                                
-        //         gap: 6px;
-
-        //         z-index: 200;
-
-        //         border-radius: 5px;
-        //         background-color: #8083FF;
-                
-        //         cursor: pointer;
-
-        //         .bar {
-        //             width: 25px;
-        //             height: 3px;
-        //             background-color: #fff;                
-        //         }
-        //     }    
-        //  }
-
-        // .burger-left{
-        //     width: 50vw;
-        //     height: 80vh;
-
-        //     position: absolute;
-        //     top: 0;
-        //     left: -100vw;
-        //     // left: 0;
-
-        //     display: flex;
-        //     flex-direction: column;
-        //     gap: 20px;
-
-        //     padding-top: 10vh;
-
-        //     background-color: lightgray;
-
-        //     z-index: 150;
-        // }
-
-        
 
         .item{
             /* 🦄text 수직정렬
@@ -85,68 +29,78 @@
                 transform: scale(1.1);
             }
         }
-
-        .left{
-            flex: 1;    /* 🦄flex:1  */
-            display: flex;            
-            gap: 25px;
-            padding-left: 20px;
-        }
-        // .center{
-        //     flex: 1;     /* 🦄flex:1  */
-        //     text-align: center;
-
-        //     font-size: 30px;
-        //     letter-spacing: 2px;
-        // }
-        .right{
-            flex: 1;     /* 🦄flex:1  */
-
+ 
+        .icons{
             display: flex;
-            // align-items: center;
-            justify-content: center;
-            gap: 25px;
+            gap: 15px;
+            color: #777;
+            cursor: pointer;                  
+         
+            .cartIcon{
+                position: relative;
+                
+                span{
+                    position: absolute;
+                    right: -10px;
+                    top: -10px;
 
-            .icons{
-                display: flex;
-                gap: 15px;
-                color: #777;
-                cursor: pointer;                  
-             
-                .cartIcon{
-                    position: relative;
-                    
-                    span{
-                        position: absolute;
-                        right: -10px;
-                        top: -10px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
 
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
+                    font-size: 12px;
+                    width: 20px;
+                    height: 20px;
 
-                        font-size: 12px;
-                        width: 20px;
-                        height: 20px;
-
-                        border-radius: 50%;
-                        background-color: rgb(212, 26, 26);
-                        color: white;      
-                    }
+                    border-radius: 50%;
+                    background-color: rgb(212, 26, 26);
+                    color: white;      
                 }
             }
-        }        
+        }    
+    }
+    .menu-icon{
+        display: none;
+    }
+    .sideNav{         
+        display: none;  
     }
 }
 
 
+
+@media (max-width:1050px) {
+    #navbar{    
+        .wrapper{    
+            width: 900px;
+        }
+    }  
+}
+
+@media (max-width:840px) {
+    #navbar{    
+        .wrapper{    
+            width: 800px;
+        }
+    }  
+}
+
+// 🍀sidebar
 @media (max-width:700px) {
     #navbar{    
         .wrapper{    
             width: 620px;
+            .none{
+                display: none;
+            }
         }
-        .close{
-            display: none;
+
+        .menu-icon{
+            display: block;
+            position: fixed;
+            top: 20px;
+            left: 20px;
+
         }
 
         .sideNav{         
@@ -190,7 +144,33 @@
                 }
               }
         }
-
     }
-
 }
+
+
+
+@media (max-width:600px) {
+    #navbar{    
+        .wrapper{    
+            width: 520px;
+         
+        }
+    }
+}
+@media (max-width:500px) {
+    #navbar{    
+        .wrapper{    
+            width: 420px;
+        }
+    }
+}
+
+@media (max-width:450px) {
+    #navbar{    
+        .wrapper{    
+            width: 400px;
+        }
+    }
+}
+
+
