--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -106,7 +106,7 @@
            }
         }
 
-        /* 🦄responsive + transition 효과
+        /* 🦄responsive + transition + position 효과
             미리 만들어서 left -120%로 숨겨둔 후, 
             left 0 으로 이동시킴
         */
