--- a/src/App.scss
+++ b/src/App.scss
@@ -182,7 +182,7 @@ ul {
 }
 
 // ---------------🍀 CategoryProducts--------------
-.CategoryProducts{
+#CategoryProducts{
     // margin: 100px 200px;
     padding-top: 50px;
 
@@ -626,6 +626,15 @@ ul {
 
     #slider{   
         max-width: 900px;
+        height: 20vh;
+
+        .icons{
+            .icon{
+                width: 30px;
+                height: 30px;
+            }
+        }
+        
     }   
 }
 
@@ -643,10 +652,44 @@ ul {
 @media (max-width:700px) {
     body {
         max-width: 620px;    
+        
       }
     #slider{   
         max-width: 620px;
+    } 
+
+
+    #ProductsFiltered,  
+    #CategoryProducts{                    
+        .bottom{        
+          .card{
+                width: 140px;          
+                
+                .imageWrap{
+                    width: 100%;
+                    height: 150px;                   
+                }
+           
+                .titleWrapper{    
+                    display: flex;     
+                    flex-direction: column;
+                    .title{
+                                                
+                    }                  
+                    .prices{
+                        display: flex;     
+                        flex-direction: column;
+                        
+                        .stock{
+                            display: none;
+                        }                      
+               
+                    }            
+                }
+            }
+        }
     }
+    
 }
 @media (max-width:600px) {
     body {
