--- a/src/App.scss
+++ b/src/App.scss
@@ -77,7 +77,7 @@ ul {
 
 // ---------------🍀footer--------------
 #footer{
-    margin: 100px 200px 20px 200px;
+    // margin: 100px 200px 20px 200px;
     .top{
         display: flex;
         gap: 50px;
@@ -611,7 +611,7 @@ ul {
 }
 
 @media (max-width:1050px) {
-    body {
+    body{
         max-width: 900px;    
       }
 
@@ -768,4 +768,58 @@ ul {
 }
 
 
+
+// -----
+
+
+// @media (max-width:1050px) {
+//     #navbar{    
+//         .wrapper{    
+//             width: 900px;
+//             background-color: yellow;
+//         }
+//     }  
+// }
+
+// @media (max-width:840px) {
+//     #navbar{    
+//         .wrapper{    
+//             width: 800px;
+//         }
+//     }  
+// }
+
+// // 🍀sidebar
+// @media (max-width:700px) {
+//     #footer{    
+//         width: 620px;
+
+//     }
+// }
+
+
+
+// @media (max-width:600px) {
+//     #navbar{    
+//         .wrapper{    
+//             width: 520px;
+         
+//         }
+//     }
+// }
+// @media (max-width:500px) {
+//     #navbar{    
+//         .wrapper{    
+//             width: 420px;
+//         }
+//     }
+// }
+
+// @media (max-width:450px) {
+//     #navbar{    
+//         .wrapper{    
+//             width: 400px;
+//         }
+//     }
+// }
 
