--- a/src/components/MagnifyingGlass.css
+++ b/src/components/MagnifyingGlass.css
@@ -11,15 +11,13 @@
   }
   
   .magnifying-glass {
-    width: 200px; /* Adjust the size of the magnifying glass */
-    height: 200px; /* Adjust the size of the magnifying glass */
-    border: 2px solid #333; /* Customize the magnifying glass border */
+    width: 200px; 
+    height: 200px; 
+    border: 2px solid #333; 
     position: absolute;
     background-repeat: no-repeat;
     pointer-events: none;
-    display: none;
-    /* transform: translate(-50%, -50%); */
-    
+    display: none;   
   }
   
   .magnifying-glass.zoomed {
