init: FilterInput.js

--- a/src/App.scss
+++ b/src/App.scss
@@ -341,8 +341,8 @@ ul {
 
 }
 
-// ---------------🍀 Filter--------------
-#Filter{
+// ---------------🍀 FilterInput--------------
+#FilterInput{
     display: flex;
     flex-direction: column;
     gap: 20px;
