--- a/src/App.scss
+++ b/src/App.scss
@@ -347,6 +347,8 @@ ul {
     flex-direction: column;
     gap: 20px;
     
+    padding-left: 1rem;
+    
     .checkboxWrapper{
         display: flex;
         flex-direction: column;
