--- a/src/App.scss
+++ b/src/App.scss
@@ -361,6 +361,20 @@ ul {
     }
 
 }
+
+
+// ---------------🍀 SearchPage--------------
+#SearchPage{
+    padding-top: 80px; /* navbar */
+    .wrapper{
+
+        display: flex;
+    }
+}
+
+
+
+
 // ---------------🍀 ProductsFiltered--------------
 #ProductsFiltered{    
     // margin: 100px 200px;
